fix blockquote spacing

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -73,8 +73,8 @@ dd {
 // Blockquote Styling
 blockquote {
     --flow-gap: var(--space-2xl);
-    padding: var(--space-l) 0;
-    margin: var(--space-2xl) 0;
+    padding: var(--space-m) 0;
+    margin-bottom: var(--space-s);
     line-height: 1.8;
     position: relative;
 
